--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,14 @@ gems:
 paginate: 10
 paginate_path: /blog/page:num/
 
+#this part configures the header in homepage
+
 title: openrampette
 tagline: this is the repo for the openrampette project
+buttons:
+  - text: View on GitHub
+    link: https://github.com/opencarecc/openrampette
+  - text: Download .zip
+    link: https://github.com/opencarecc/openrampette/zipball/master
+  - text: Build your own!
+    link: https://github.com/opencarecc/openrampette/wiki
