--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ paginate_path: /blog/page:num/
 #this part configures the header in homepage
 
 title: openrampette
-tagline: this is the repo for the openrampette project
+tagline: miglioramento l’accessibilità degli esercizi commerciali
 buttons:
   - text: View on GitHub
     link: https://github.com/opencarecc/openrampette
