--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ gems:
 exclude: [chiamata, README.md]
 paginate: 10
 paginate_path: /blog/page:num/
+github: [metadata]
 
 #this part configures the header in homepage
 
