test new navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@
 - title: Home
   url: /
 
-- title: Group of Things
-  url: /group/
+- title: pages
+  url: /pages/
   sublinks:
     - title: chiamata
       url: /pages/chiamata
