--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ permalink: /blog/:year/:month/:day/:title/
 gems:
   - jekyll-sitemap
   - jekyll-paginate
+  - jekyll-language-plugin
 exclude: [chiamata, README.md]
 paginate: 10
 paginate_path: /blog/page:num/
@@ -21,3 +22,8 @@ buttons:
     link: https://github.com/opencarecc/openrampette/zipball/master
   - text: Build your own!
     link: https://github.com/opencarecc/openrampette/wiki
+
+# language plugin stuff
+
+language_data: data.lang.%%
+language_includes_dir: _i18n
