--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,14 +2,14 @@
   url: /about
 
 - title: TEMI
-  url: /pages
+  url: /
   sublinks:
     - title: Chiamata
-      url: /pages/chiamata
+      url: /chiamata
     - title: Procedura
-      url: /pages/procedura
+      url: /procedura
     - title: Comunicazione
-      url: /pages/comunicazione
+      url: /comunicazione
 
 - title: NEWS
   url: /blog
