--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -4,5 +4,12 @@ global:
 home:
   topics: "Project themes"
 video:
-  title: "video title"
+  title: "video english title"
   description: "english description"
+topics:
+  title-1: "topic 1"
+  description-1: "topic 1 description"
+  title-2: "topic 2"
+  description-2: "topic 2 description"
+  title-3: "topic 3"
+  description-3: "topic 3 description"
