--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -20,3 +20,10 @@ news:
   link_to_blog: "Tutte le news"
 license:
   title: "Open Source"
+credits:
+  title: "Credits"
+  credits_content_html: "Questo sito è curato da <a href='http://wemake.cc' target='_blank'>WeMake</a> ed è parte del progetto <a href='http://opencare.cc/' target='_blank'>opencare.cc</a>.
+                        <br><br>
+                        Questo progetto ha ricevuto fondi dal programma di ricerca e innovazione Horizon 2020 dell'Unione Europea, accordo numero 688670
+                        <br><br>
+                        Vuoi contattarci? Lascia un commento qui sotto o scrivici <a href='mailto:opencare@wemake.cc?subject=open rampette info request'>qui</a>"
