--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -23,7 +23,10 @@ license:
 credits:
   title: "Credits"
   credits_content_html: "This website is maintained by <a href='http://wemake.cc' target='_blank'>WeMake</a> as part of the <a href='http://opencare.cc/' target='_blank'>opencare.cc</a> project.
-  <br><br>
-  This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 688670.
-  <br><br>
-  Got questions? Leave a comment below or get in touch <a href='mailto:opencare@wemake.cc?subject=In Pe' info request'>here</a>"
+                        <br><br>
+                        This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 688670.
+                        <br><br>
+                        Got questions? Leave a comment below or get in touch <a href='mailto:opencare@wemake.cc?subject=In Pe' info request'>here</a>"
+footer:
+  credits_line_html: "is maintained by <a href='https://opencare.cc'>opencarecc</a>"
+  eu_agreement_line: "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670"
