--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -27,6 +27,11 @@ credits:
                         This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 688670.
                         <br><br>
                         Got questions? Leave a comment below or get in touch <a href='mailto:opencare@wemake.cc?subject=In Pe' info request'>here</a>"
+contribute:
+  title: "How to contribute"
+  contribute_1: "Contribute 1"
+  contribute_2: "Contribute 2"
+  contribute_3: "Contribute 3"
 footer:
   credits_line_html: "is maintained by <a href='https://opencare.cc'>opencarecc</a>"
   eu_agreement_line: "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670"
