--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -27,6 +27,11 @@ credits:
                         Questo progetto ha ricevuto fondi dal programma di ricerca e innovazione Horizon 2020 dell'Unione Europea, accordo numero 688670
                         <br><br>
                         Vuoi contattarci? Lascia un commento qui sotto o scrivici <a href='mailto:opencare@wemake.cc?subject=open rampette info request'>qui</a>"
+contribute:
+  title: "Come contribuire al progetto"
+  contribute_1: "Contribuire 1"
+  contribute_2: "Contribuire 2"
+  contribute_3: "Contribuire 3"
 footer:
   credits_line_html: "è curato da <a href='https://opencare.cc'>opencarecc</a>"
   eu_agreement_line: "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670"
