--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -24,6 +24,14 @@ topics:
   description_3: "topic 3 description"
 slick:
   description: ""
+release_notes:
+  title: "Release 0.1 - 2016/09/12"
+  note_1: "Release Note 1"
+  note_2: "Release Note 2"
+  note_3: "Release Note 3"
+  more_link:
+    - text: "More details"
+      link_html: "about"
 news:
   latest_news: "Latest news from the blog"
   link_to_blog: "All the news"
