refact code tutorials include file

--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -36,12 +36,19 @@ news:
   latest_news: "Latest news from the blog"
   link_to_blog: "All the news"
 tutorials:
-  title_1: "Tutorial 1"
-  description_1: "This is a brief description of Tutorial 1"
-  title_2: "Tutorial 2"
-  description_2: "This is a brief description of Tutorial 2"
-  title_3: "Tutorial 3"
-  description_3: "This is a brief description of Tutorial 3"
+  tutorial_column:
+    - title: "Tutorial 1"
+      description: "This is a brief description of Tutorial 1"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
+    - title: "Tutorial 2"
+      description: "This is a brief description of Tutorial 2"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
+    - title: "Tutorial 3"
+      description: "This is a brief description of Tutorial 3"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
   more_link:
     - text: "Check all the tutorials"
       link_html: "about"
