--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -36,12 +36,19 @@ news:
   latest_news: "Ultime news dal blog"
   link_to_blog: "Tutte le news"
 tutorials:
-  title_1: "Tutorial 1"
-  description_1: "Questa è la descrizione del Turorial 1"
-  title_2: "Tutorial 2"
-  description_2: "Questa è la descrizione del Turorial 2"
-  title_3: "Tutorial 3"
-  description_3: "Questa è la descrizione del Turorial 3"
+  tutorial_column:
+    - title: "Tutorial 1"
+      description: "Questa è la descrizione del Turorial 1"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
+    - title: "Tutorial 2"
+      description: "Questa è la descrizione del Turorial 2"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
+    - title: "Tutorial 3"
+      description: "Questa è la descrizione del Turorial 3"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
   more_link:
     - text: "Vedi tutti i tutorial"
       link_html: "about"
