--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -82,3 +82,7 @@ contribute:
 footer:
   credits_line_html: "is maintained by <a href='https://opencare.cc'>opencarecc</a>"
   eu_agreement_line: "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670"
+category:
+  title: "Archive for category"
+  year: "Year"
+  category: "filed under"
