--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -1,6 +1,18 @@
+# Hello, this is the translation file for ITALIAN language
+
+
+# ------------------------------
+# --- GLOBAL dictionary keys --- 
+# ------------------------------
 global:
   read_more: "Scopri di più"
   read_more_post: "Leggi tutto"
+
+
+# ---------------------------------
+# --- HOME page dictionary keys --- 
+# ---------------------------------
+# dictionary keys for homeheader.html include file
 header:
   title: "open rampette"
   tagline: "miglioriamo l’accessibilità degli esercizi commerciali"
@@ -11,9 +23,13 @@ header:
       link: "https://github.com/opencarecc/openrampette/zipball/master"
     - text: "Costruisci!"
       link: "https://github.com/opencarecc/openrampette/wiki"
+
+# dictionary keys for video.html include file
 video:
   title: "Cos'è open rampette?"
   description: "open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto"
+
+# dictionary keys for topics.html include file
 topics:
   title: "I temi trattati"
   topic_column:
@@ -29,8 +45,12 @@ topics:
       description: "Mettiamo in mostra i negozi accessibili e creiamo un dialogo costruttivo"
       link: "comunicazione"
       img_url: "assets/images/sticker.png"
+
+# dictionary keys for slick_slider.html include file
 slick:
   description: ""
+
+# dictionary keys for release_notes.html include file
 release_notes:
   title: "Release 0.1 - 2016/09/12"
   note_1: "Nota 1"
@@ -39,9 +59,13 @@ release_notes:
   more_link:
     - text: "Maggiori informazioni"
       link_html: "about"
+
+# dictionary keys for news.html include file
 news:
   latest_news: "Ultime news dal blog"
   link_to_blog: "Tutte le news"
+
+# dictionary keys for tutorials.html include file
 tutorials:
   tutorial_column:
     - title: "Tutorial 1"
@@ -59,8 +83,12 @@ tutorials:
   more_link:
     - text: "Vedi tutti i tutorial"
       link_html: "about"
+
+# dictionary keys for license.html include file
 license:
   title: "Open Source"
+
+# dictionary keys for credits.html include file
 credits:
   title: "Credits"
   credits_content_html: "Questo sito è curato da <a href='http://wemake.cc' target='_blank'>WeMake</a> ed è parte del progetto <a href='http://opencare.cc/' target='_blank'>opencare.cc</a>.
@@ -68,22 +96,41 @@ credits:
                         Questo progetto ha ricevuto fondi dal programma di ricerca e innovazione Horizon 2020 dell'Unione Europea, accordo numero 688670
                         <br><br>
                         Vuoi contattarci? Lascia un commento qui sotto o scrivici <a href='mailto:opencare@wemake.cc?subject=open rampette info request'>qui</a>"
+
+# dictionary keys for contribute.html include file
 contribute:
   title: "Come contribuire al progetto"
   contribute_1: "Contribuire 1"
   contribute_2: "Contribuire 2"
   contribute_3: "Contribuire 3"
+
+
+# ------------------------------
+# --- FOOTER dictionary keys --- 
+# ------------------------------
+# dictionary keys for footer.html include file
 footer:
   credits_line_html: "è curato da <a href='https://opencare.cc'>opencarecc</a>"
   eu_agreement_line: "This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 688670"
+
+
+# --------------------------------
+# --- CATEGORY dictionary keys --- 
+# --------------------------------
+# dictionary keys for category.html & post.html layout files
 category:
   title: "Archivio delle news nella categoria"
   year: "Anno"
   category: "categoria"
+
+
+# ----------------------------
+# --- BLOG dictionary keys --- 
+# ----------------------------
+# dictionary keys for blog/index.html file
 pagination:
   next: "Seguente"
   previous: "Precedente"
   page_1: "Pagina"
   page_2: "di"
 
-  
