add site title translations and directories for language plugin

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,9 @@ languages: ["it", "en"]
 default_lang: "it"
 exclude_from_localization: ["javascript", "images", "css"]
 parallel_localization: true
+data_dir: ./_data
+destination:  ./_site
+
+title:
+  en: "open rampette by opencarecc"
+  it: "open rampette by opencarecc"
