untranslate head and site title in tab bar

--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,6 @@ github: [metadata]
 # title:
 #   en: "open rampette by opencarecc"
 #   it: "open rampette by opencarecc"
+
+title: "open rampette"
+tagline: "miglioriamo l’accessibilità degli esercizi commerciali"
