--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,7 @@ github: [metadata]
 
 title: "open rampette"
 tagline: "miglioriamo l’accessibilità degli esercizi commerciali"
+
+index:
+  it:
+  en: en/index.html
