add translation for video include file

--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -28,7 +28,7 @@ header:
 # dictionary keys for video.html include file
 video:
   title: "Cos'è open rampette?"
-  description: "open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto"
+  description: "open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href='http://opencare.cc' target='_blank'>opencare</a>."
 
 # dictionary keys for topics.html include file
 topics:
