add translation for project pages and fix nav permalinks

--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -5,11 +5,11 @@
   url: /en/pages
   sublinks:
     - title: THE CALL
-      url: /en/chiamata
+      url: /en/call
     - title: THE PROCEDURE
-      url: /en/procedura
+      url: /en/procedure
     - title: COMMUNICATION
-      url: /en/comunicazione
+      url: /en/communication
 
 - title: NEWS
   url: /en/blog
