--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -88,6 +88,9 @@ tutorials:
 # dictionary keys for license.html include file
 license:
   title: "Open Source"
+  license_content_html: "Software - <a href='https://www.gnu.org/licenses/gpl-3.0.en.html' target='_blank'>GNU General Public License</a>
+                        <br>
+                        Hardware - <a href='http://ohwr.org/cernohl' target='_blank'>CERN OHL v.1.2</a>"
 
 # dictionary keys for credits.html include file
 credits:
