bring back tutorials dictionary keys

--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -74,6 +74,14 @@ tutorials:
       description: "This is a brief description of Tutorial 1"
       link: "http://www.google.com"
       img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
+    - title: "Tutorial 2"
+      description: "This is a brief description of Tutorial 2"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
+    - title: "Tutorial 3"
+      description: "This is a brief description of Tutorial 3"
+      link: "http://www.google.com"
+      img_url: "http://placekitten.com.s3.amazonaws.com/homepage-samples/408/287.jpg"
   more_link:
     - text: "Check all the tutorials"
       link_html: "about"
