--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -2,7 +2,7 @@
 
 
 # ------------------------------
-# --- GLOBAL dictionary keys --- 
+# --- GLOBAL dictionary keys ---
 # ------------------------------
 global:
   read_more: "Read more"
@@ -10,7 +10,7 @@ global:
 
 
 # ---------------------------------
-# --- HOME page dictionary keys --- 
+# --- HOME page dictionary keys ---
 # ---------------------------------
 # dictionary keys for homeheader.html include file
 header:
@@ -27,6 +27,7 @@ header:
 # dictionary keys for video.html include file
 video:
   title: "video english title"
+  url: "https://www.youtube.com/embed/bARoyq8Tnto"
   description: "english description"
   link: "about"
 
@@ -115,7 +116,7 @@ contribute:
 
 
 # ------------------------------
-# --- FOOTER dictionary keys --- 
+# --- FOOTER dictionary keys ---
 # ------------------------------
 # dictionary keys for footer.html include file
 footer:
@@ -124,7 +125,7 @@ footer:
 
 
 # --------------------------------
-# --- CATEGORY dictionary keys --- 
+# --- CATEGORY dictionary keys ---
 # --------------------------------
 # dictionary keys for category.html & post.html layout files
 category:
@@ -134,7 +135,7 @@ category:
 
 
 # ----------------------------
-# --- BLOG dictionary keys --- 
+# --- BLOG dictionary keys ---
 # ----------------------------
 # dictionary keys for blog/index.html file
 # pagination:
@@ -142,5 +143,3 @@ category:
 #   previous: "Previous"
 #   page_1: "Page"
 #   page_2: "of"
-
-  
