--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -14,7 +14,7 @@ global:
 # ---------------------------------
 # dictionary keys for homeheader.html include file
 header:
-  title: "open rampette"
+  title: "**open rampette**"
   tagline: "accessible shops for everyone"
   buttons:
     - text: "View on GitHub"
