--- a/_data/it/lang.yml
+++ b/_data/it/lang.yml
@@ -14,7 +14,7 @@ global:
 # ---------------------------------
 # dictionary keys for homeheader.html include file
 header:
-  title: "**open rampette**"
+  title: "open rampette"
   tagline: "miglioriamo l’accessibilità degli esercizi commerciali"
   buttons:
     - text: "Vedi su GitHub"
@@ -26,9 +26,9 @@ header:
 
 # dictionary keys for video.html include file
 video:
-  title: "Cos'è **open rampette**?"
+  title: "Cos'è open rampette?"
   url: "https://www.youtube.com/embed/bARoyq8Tnto"
-  description: "**open rampette** è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href='http://opencare.cc' target='_blank'>opencare</a>."
+  description: "open rampette è un’iniziativa pilota per il miglioramento dell’accessibilità degli esercizi commerciali ed è promossa dal Comune di Milano e da WeMake | fablab e makerspace all’interno del progetto <a href='http://opencare.cc' target='_blank'>opencare</a>."
   link: "about"
 
 # dictionary keys for topics.html include file
@@ -106,7 +106,7 @@ credits:
                         <br><br>
                         Questo progetto ha ricevuto fondi dal programma di ricerca e innovazione Horizon 2020 dell'Unione Europea, accordo numero 688670
                         <br><br>
-                        Vuoi contattarci? Lascia un commento qui sotto o scrivici <a href='mailto:opencare@wemake.cc?subject=**open rampette** info request'>qui</a>"
+                        Vuoi contattarci? Lascia un commento qui sotto o scrivici <a href='mailto:opencare@wemake.cc?subject=open rampette info request'>qui</a>"
 
 # dictionary keys for contribute.html include file
 contribute:
